<resources>
    <string name="mdl_app_name">St. Luke\'s 24/7</string>
    <string name="mdl_application_splash_virtual_care">St. Luke\'s 24/7 Virtual care, Anywhere.</string>
    <string name="mdl_doctor_list">DoctorList</string>
    <string name="mdl_settings">Settings</string>
    <string name="mdl_login">LOGIN</string>
    <string name="mdl_virtual_care">Virtual Care, Anywhere.</string>
    <string name="mdl_access_board">24/7 Access to Board Certified Doctors</string>
    <string name="mdl_forgot_username">Forgot Username</string>
    <string name="mdl_username">Username</string>
    <string name="mdl_password">Password</string>
    <string name="mdl_title_activity_home">HomeActivity</string>
    <string name="mdl_title_video_home">Video Consultation</string>
    <string name="mdl_invalid_credentials">Invalid Username or password</string>
    <string name="mdl_empty_credentials">Username and password should not be empty</string>
    <string name="mdl_home">Home</string>
    <string name="mdl_welcome">Welcome</string>
    <string name="mdl_sav">Schedule a Visit</string>
    <string name="mdl_mdlive_assist">St. Luke\'s 24/7 Assist</string>
    <string name="mdl_my_health">My Health</string>
    <string name="mdl_message_center">Message Center</string>
    <string name="mdl_symptom_checker">Symptom Checker</string>
    <string name="mdl_my_account">My Account</string>
    <string name="mdl_ok_upper">OK</string>
    <string name="mdl_Ok">Ok</string>
    <string name="mdl_true_txt">true</string>
    <string name="mdl_binary_true">1</string>
    <string name="mdl_binary_false">0</string>
    <string name="mdl_delete">Delete</string>
    <string name="mdl_please_wait">Please wait</string>
    <string name="mdl_thankkyou_phone_appoint_txt">Thank you for requesting a visit with %1$s! The doctor will call you shortly.</string>
    <string name="mdl_ada_hamburger">Navigated </string>
    <string name="mdl_ada_bell">Notification</string>
    <string name="mdl_ada_back_button">Back</string>
    <string name="mdl_ada_profile_button">Profile Image</string>
    <string name="mdl_ada_pin_one">one</string>
    <string name="mdl_ada_pin_two">Two</string>
    <string name="mdl_ada_pin_three">Three</string>
    <string name="mdl_ada_pin_four">Four</string>
    <string name="mdl_ada_pin_five">Five</string>
    <string name="mdl_ada_pin_six">Six</string>
    <string name="mdl_ada_tick_button">Done</string>
    <string name="mdl_ada_close_button">Close</string>
    <string name="mdl_ada_filter_button">Filter</string>
    <string name="mdl_ada_dropdown">Dropdown list</string>
    <string name="mdl_ada_seethisdoctor_button">See this doctor now button</string>
    <string name="mdl_ada_talktodoctor_button">Talk to this doctor now button</string>
    <string name="mdl_ada_datepicker_providerprofile_button">Date Picker to edit or change the date</string>
    <string name="mdl_ada_right_arrow_button">Next</string>
    <string name="mdl_ada_reply_button">Reply</string>
    <string name="mdl_ada_takepic_button">Take a Picture</string>
    <string name="mdl_ada_gallery_button">Gallery</string>
    <string name="mdl_ada_video_btn_forward">by Video Button </string>
    <string name="mdl_ada_phone_btn_forward">by phone Button </string>
    <string name="mdl_ada_edit"> Edit </string>
    <string name="mdl_ada_delete"> Delete </string>
    <string name="mdl_ada_arrowup_photo_button">Double Tap to add a photo</string>
    <string name="mdl_ada_arrowdown_photo_button">Double Tap to collapse the add a photo option</string>
    <string name="mdl_your_consultation">Your Consultation</string>
    <string name="mdl_summary">SUMMARY</string>
    <string name="mdl_test">Test</string>
    <string name="mdl_dollar_Amount49">$49.00</string>
    <string name="mdl_rate_consulatation">RATE CONSULTATION</string>
    <string name="mdl_done">Done</string>
    <string name="mdl_dollar">$</string>
    <string name="mdl_dollar_symbol">$</string>
    <string name="mdl_amount_zero">0.00</string>
    <string name="mdl_error">Error</string>
    <string name="mdl_image_name_upper">IMAGE NAME</string>
    <string name="mdl_upload_upper">UPLOAD</string>
    <string name="mdl_delete_customer_successfully">Customer document deleted successfully</string>
    <string name="mdl_medical_history">Medical History</string>
    <string name="mdl_last_update">Last Updated </string>
    <string name="mdl_yes">Yes</string>
    <string name="mdl_no">No</string>
    <string name="mdl_pre_existing_conditions">Pre-Existing Conditions</string>
    <string name="mdl_no_conditions_reported">No pre-existing\nconditions reported</string>
    <string name="mdl_no_condition_reported">No conditions reported</string>
    <string name="mdl_pediatric_completed_txt">Completed</string>
    <string name="mdl_pediatric_notcompleted_txt">Not Completed</string>
    <string name="mdl_edit_upper">EDIT</string>
    <string name="mdl_medications">Medications</string>
    <string name="mdl_allergies">Allergies</string>
    <string name="mdl_photos_upper">PHOTOS</string>
    <string name="mdl_helpful_for_rashes">Helpful for rashes, cuts, etc.</string>
    <string name="mdl_take_photo">Take a photo</string>
    <string name="mdl_add_conditions">Add Conditions</string>
    <string name="mdl_procedures">Procedures</string>
    <string name="mdl_behaviour">Behaviour</string>
    <string name="mdl_health_conditions">Health Conditions</string>
    <string name="mdl_behavioural_health_history">Behavioral Health History</string>
    <string name="mdl_billing_info">Billing information</string>
    <string name="mdl_payment_credit_card">Your credit card will only be used for the\nconsultation cost and will be charged after your consultation.</string>
    <string name="mdl_expiration_date">Expiration Date</string>
    <string name="mdl_mm_yy">00/00</string>
    <string name="mdl_zip_code">Zip Code</string>
    <string name="mdl_payment_zipcode_hint">12345&#8211;7890</string>
    <string name="mdl_card_type">Is this an FSA/HSA card?</string>
    <string name="mdl_apply_offer_code">Apply Offer Code</string>
    <string name="mdl_payment_total">Total :$49.00</string>
    <string name="mdl_total_amount_in_doller">Total :$</string>
    <string name="mdl_HostedPCI_webview_loadurl">file:///android_asset/htdocs/index.html</string>
    <string name="mdl_expiration_month_year">Expiration month/year</string>
    <string name="mdl_Month_year">MM/yy</string>
    <string name="mdl_MM_yyyy">MM/yyyy</string>
    <string name="mdl_please_enter_valid_zipcode">Please enter a valid Zipcode.</string>
    <string name="mdl_please_fill_required_fields">Please fill in all the required fields</string>
    <string name="mdl_exception_in_thread">Exception in thread</string>
    <string name="mdl_cancel_upper">CANCEL</string>
    <string name="mdl_pharmacy_details_updated">Pharmacy details updated</string>
    <string name="mdl_credit_header">Credit Card</string>
    <string name="mdl_consultation_header">Your Consultation</string>
    <string name="mdl_welcome_back">Welcome back!</string>
    <string name="mdl_resume_saved_consultation">Please resume your saved consultation to speak to your doctor</string>
    <string name="mdl_consultation_info">CONSULTATION INFO</string>
    <string name="mdl_patient">Patient:</string>
    <string name="mdl_reason">Reason:</string>
    <string name="mdl_doctor">Doctor:</string>
    <string name="mdl_choosen_pharmacy_upper">CHOSEN PHARMACY</string>
    <string name="mdl_resume_consultation_txt">Resume Consultation</string>
    <string name="mdl_ph_manual_search">MANUAL SEARCH</string>
    <string name="mdl_ph_zipcode">ZIP Code</string>
    <string name="mdl_ph_or_str">OR</string>
    <string name="mdl_ph_Or_str">Or</string>
    <string name="mdl_empty_string"></string>
    <string name="mdl_preferred">Preferred</string>
    <string name="mdl_doctor_on_call">Doctor On Call</string>
    <string name="mdl_average_wait">Average Wait Time: 6 min</string>
    <string name="mdl_average_wait_dots">Average Wait: &#8230;</string>
    <string name="mdl_see_doctor_on_call">See Doctor on Call</string>
    <string name="mdl_see_first_available_doctor">Choose First Available</string>
    <string name="mdl_choose_other_doctor">Choose Other Doctor</string>
    <string name="mdl_filter_upper">FILTER</string>
    <string name="mdl_weight">Weight</string>
    <string name="mdl_lbs">lbs</string>
    <string name="mdl_locating_available_doctors">locating available doctors</string>
    <string name="mdl_telephone_number">Telephone Number</string>
    <string name="mdl_doctoroncall_txt">Doctor On-Call is a 24 hour service where\n you can get an instant consultation by phone with the available doctor.</string>
    <string name="mdl_reason_txt">Hello Test, what seems to be the\n best problem today?</string>
    <string name="mdl_card_txt">Please fill your credit card information below :</string>
    <string name="mdl_choose_provider">CHOOSE YOUR DOCTOR</string>
    <string name="mdl_chat_with_coach">CHAT WITH A COACH</string>
    <string name="mdl_available_txt"> Available 24/7 by phone</string>
    <string name="mdl_doctorOnCall_txt">Doctor on call</string>
    <string name="mdl_video_or_phone">video or phone</string>
    <string name="mdl_phone">phone</string>
    <string name="mdl_doctor_details">Provider Profile</string>
    <string name="mdl_general_practise">General Practise</string>
    <string name="mdl_capital_regional">Capital Regional\nMedical Center</string>
    <string name="mdl_qualifications">Qualifications</string>
    <string name="mdl_specialties">Specialties</string>
    <string name="mdl_licensed_in">Licensed In</string>
    <string name="mdl_languages_spoken">Languages Spoken</string>
    <string name="mdl_provider_location">Location</string>
    <string name="mdl_education">Education     </string>
    <string name="mdl_about_me">About Me     </string>
    <string name="mdl_request_appointment">Request Appointment</string>
    <string name="mdl_with_patient">With Patient</string>
    <string name="mdl_date_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="mdl_make_appointment_txt">Request Appointment</string>
    <string name="mdl_confirm_appointment_txt">Confirm Appointment</string>
    <string name="mdl_time_for_visit_txt">Time For Visit</string>
    <string name="mdl_select_provider">Or choose a specific provider below</string>
    <string name="mdl_pediatric_please_text">Please complete pediatric profile below :</string>
    <string name="mdl_pediatric_Birth_Weight_text">BIRTH WEIGHT</string>
    <string name="mdl_pediatric_current_Weight_text">CURRENT WEIGHT LBS</string>
    <string name="mdl_pediatric_lbs_text">lbs</string>
    <string name="mdl_pediatric_delivery_text">DELIVERY TYPE</string>
    <string name="mdl_pediatric_diet_text">CURRENT DIET</string>
    <string name="mdl_pediatric_select_hint">Select</string>
    <string name="mdl_pediatric_birth_describe">Please describe</string>
    <string name="mdl_pediatric_edt_last_shot">Please explain briefly</string>
    <string name="mdl_pediatric_smoking_text">Smoking exposure</string>
    <string name="mdl_pediatric_childcare_text">Childcare outside home</string>
    <string name="mdl_pediatric_mandatory_text">All fields are mandatory</string>
    <string name="mdl_pediatric_siblings_text">Siblings</string>
    <string name="mdl_pediatric_last_shot">Last shot</string>
    <string name="mdl_pediatric_birthComplications_text">Birth complications</string>
    <string name="mdl_pediatric_immunization_text">Immunization up to date?</string>
    <string name="mdl_radio_yes_text">Yes</string>
    <string name="mdl_radio_No_text">No</string>
    <string name="mdl_patient_under_age">Patient is under 2 years of age</string>
    <string name="mdl_filter_txt">FILTERS</string>
    <string name="mdl_to">To:</string>
    <string name="mdl_subject">Subject :</string>
    <string name="mdl_message">Message</string>
</resources>