<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pediatricContainer"
        style="@style/ContainerStyle"
        android:background="@color/mdliveBottomBlueColor">
        <include
            android:id="@+id/toolbar"
            layout="@layout/mdlive_toolbar" />

        <ScrollView
            android:id="@+id/pediatricScroll"
            style="@style/ScrollViewStyle"
            android:background="@color/mdliveBottomBlueColor"
            android:layout_below="@+id/header">

            <LinearLayout
                style="@style/LinearLayoutStyle"
                android:layout_marginBottom="@dimen/ped_bottom"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ageTxt"
                    style="@style/Pediatric_TextStyle"
                    android:text="@string/mdl_patient_under_age"
                    android:tag="patient_under_age"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_medium"
                    android:visibility="gone"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Pediatric_TextStyle"
                    android:text="@string/mdl_pediatric_please_text"
                    android:tag="pediatric_please_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_medium"
                    android:visibility="gone" />


                <LinearLayout
                    style="@style/Pediatric_Weight_Layout_style"
                    android:visibility="gone">

                    <TextView
                        style="@style/Pediatric_Weight_text_style"

                        android:text="@string/mdl_pediatric_Birth_Weight_text" />

                    <EditText
                        android:id="@+id/edt_birthweight"
                        style="@style/Pediatric_Weight_edittext_style" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/mdl_pediatric_lbs_text"
                        android:tag="pediatric_lbs_text" />

                </LinearLayout>

                <LinearLayout
                    style="@style/WagLinearLayoutStylePediatric"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        style="@style/Pediatric_relative_layout_style"
                        android:orientation="vertical"

                        >

                        <TextView
                            style="@style/Pediatric_Weight_text_style"
                            android:layout_width="match_parent"
                            android:text="@string/mdl_pediatric_current_Weight_text"
                            android:tag="pediatric_current_Weight_text"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/edt_currentweight"
                            style="@style/Pediatric_drop_text_style"
                            android:layout_width="match_parent"
                            android:background="#ffffff"
                            android:gravity="start|left"
                            android:hint=""
                            android:inputType="number"
                            android:maxLength="3" />

                        <View style="@style/ViewStyle"
                            android:layout_marginLeft="@dimen/ped_view"
                            android:layout_marginRight="@dimen/ped_view"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/mdl_pediatric_lbs_text"
                            android:tag="pediatric_lbs_text"
                            android:textColorHighlight="@color/black"
                            android:textSize="18sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_dietTypeHeader"
                        android:background="#ffffff"
                        android:layout_marginTop="@dimen/ped_header_top"
                        android:text="@string/mdl_pediatric_diet_text"
                        android:tag="pediatric_diet_text"
                        style="@style/Pediatric_Weight_text_style" />

                    <TextView
                        android:id="@+id/txt_dietType"
                        style="@style/Pediatric_drop_text_style"
                        android:background="#ffffff"
                        android:drawableRight="@drawable/dropdown_icon"
                        android:hint="@string/mdl_pediatric_select_hint"
                        android:tag="pediatric_select_hint"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/textsize_large" />
                    <View style="@style/ViewStyle"
                        android:visibility="gone"
                        android:id="@+id/separator"/>

                    <TextView
                        style="@style/Pediatric_TextStyle"
                        android:text="@string/mdl_pediatric_delivery_text"
                        android:tag="pediatric_delivery_text"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txt_deliveryType"
                        style="@style/Pediatric_drop_text_style"
                        android:hint="@string/mdl_pediatric_select_hint"
                        android:tag="pediatric_select_hint"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    style="@style/LinearLayoutStyle"

                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/layout_birthComplications"
                        style="@style/Pediatric_relative_layout_style">

                        <TextView
                            style="@style/Pediatric_TextStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/mdl_pediatric_birthComplications_text"
                            android:tag="pediatric_birthComplications_text" />


                        <RadioGroup
                            android:id="@+id/birthComplications_group"
                            style="@style/Pediatric_radio_group_style">

                            <RadioButton
                                android:id="@+id/birthComplications_yesButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_yes_text"
                                android:tag="radio_yes_text" />

                            <RadioButton
                                android:id="@+id/birthComplications_noButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_No_text"
                                android:tag="radio_No_text" />

                        </RadioGroup>
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/edt_pleaseDescribe"
                        style="@style/Pediatric_birth_compl_descr_style"
                        android:hint="@string/mdl_pediatric_birth_describe"
                        android:tag="pediatric_birth_describe"
                        android:visibility="gone" />

                    <View style="@style/viewstyle_behavioural"
                        android:visibility="gone"/>

                    <RelativeLayout style="@style/Pediatric_relative_layout_style">

                        <TextView
                            style="@style/Pediatric_TextStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/mdl_pediatric_immunization_text"
                            android:tag="pediatric_immunization_text" />


                        <RadioGroup
                            android:id="@+id/immunization_group"
                            style="@style/Pediatric_radio_group_style">

                            <RadioButton
                                android:id="@+id/immunization_yesButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_yes_text"
                                android:tag="radio_yes_text" />

                            <RadioButton
                                android:id="@+id/immunization_noButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_No_text"
                                android:tag="radio_No_text" />

                        </RadioGroup>


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_lastShot_label"
                        style="@style/Pediatric_TextStyle"
                        android:layout_centerVertical="true"
                        android:text="@string/mdl_pediatric_last_shot"
                        android:tag="pediatric_last_shot"
                        android:visibility="gone" />


                    <EditText
                        android:id="@+id/edt_lastshot"
                        style="@style/Pediatric_birth_compl_descr_style"
                        android:hint="@string/mdl_pediatric_edt_last_shot"
                        android:tag="pediatric_edt_last_shot"
                        android:visibility="gone" />

                    <View style="@style/viewstyle_behavioural"
                        android:visibility="gone"
                        android:id="@+id/edt_lastshot_view"/>

                    <RelativeLayout style="@style/Pediatric_relative_layout_style">

                        <TextView
                            style="@style/Pediatric_TextStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/mdl_pediatric_smoking_text"
                            android:tag="pediatric_smoking_text" />


                        <RadioGroup
                            android:id="@+id/smoking_group"
                            style="@style/Pediatric_radio_group_style">

                            <RadioButton
                                android:id="@+id/smoking_yesButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_yes_text"
                                android:tag="radio_yes_text" />

                            <RadioButton
                                android:id="@+id/smoking_noButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_No_text"
                                android:tag="radio_No_text" />

                        </RadioGroup>


                    </RelativeLayout>

                    <View style="@style/viewstyle_behavioural"
                        android:visibility="gone"/>

                    <RelativeLayout style="@style/Pediatric_relative_layout_style">

                        <TextView
                            style="@style/Pediatric_TextStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/mdl_pediatric_childcare_text"
                            android:tag="pediatric_childcare_text" />


                        <RadioGroup
                            android:id="@+id/childcare_group"
                            style="@style/Pediatric_radio_group_style">

                            <RadioButton
                                android:id="@+id/childcare_yesButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_yes_text"
                                android:tag="radio_yes_text" />

                            <RadioButton
                                android:id="@+id/childcare_noButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_No_text"
                                android:tag="radio_No_text" />

                        </RadioGroup>

                    </RelativeLayout>

                    <View style="@style/viewstyle_behavioural"
                        android:visibility="gone"/>

                    <RelativeLayout style="@style/Pediatric_relative_layout_style">

                        <TextView
                            style="@style/Pediatric_TextStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/mdl_pediatric_siblings_text"
                            android:tag="pediatric_siblings_text" />


                        <RadioGroup
                            android:id="@+id/siblings_group"
                            style="@style/Pediatric_radio_group_style">

                            <RadioButton
                                android:id="@+id/siblings_yesButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_yes_text"
                                android:tag="radio_yes_text" />

                            <RadioButton
                                android:id="@+id/siblings_noButton"
                                style="@style/Pediatric_radio_button_style"
                                android:text="@string/mdl_radio_No_text"
                                android:tag="radio_No_text" />

                        </RadioGroup>


                    </RelativeLayout>
                </LinearLayout>

                <View style="@style/viewstyle_behavioural"
                    android:visibility="gone"/>


                <TextView
                    style="@style/Pediatric_TextStyle"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mdl_pediatric_mandatory_text"
                    android:tag="pediatric_mandatory_text"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
        <FrameLayout
            android:id="@+id/dash_board__left_container"
            android:layout_width="@dimen/drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="left|start" />


        <FrameLayout
            android:id="@+id/dash_board__right_container"
            android:layout_width="@dimen/drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="right|end" />
</android.support.v4.widget.DrawerLayout>
    <include layout="@layout/custom_progress_dialog" />
</merge>