<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mylocation_background_color"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/Get_Started_Field_Style"
        android:layout_marginTop="@dimen/dimen_13_dp"
         >

        <com.mdlive.embedkit.uilayer.sav.CircularNetworkImageView
            android:id="@+id/ProfileImg"
            android:layout_width="@dimen/doctorOnCall_imageSize"
            android:layout_height="@dimen/doctorOnCall_imageSize"
            android:layout_marginBottom="@dimen/medical_history_common_margin"
            android:layout_marginLeft="@dimen/medical_history_common_margin"
            android:layout_marginTop="@dimen/medical_history_common_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/dash_board_doctor_icon" />

        <TextView
            android:id="@+id/PatientName"
            style="@style/chooseProviderTextStyle"
            android:layout_marginTop="@dimen/txtDoctorOnCall_marginTop"
            android:layout_marginLeft="@dimen/txtDoctorOnCall_marginLeft"
            android:layout_toRightOf="@id/ProfileImg"
            android:text="@string/mdl_doctor_on_call"
            android:tag="doctor_on_call"
            android:textSize="@dimen/txtDoctorOnCall_textSize" />

        <TextView
            android:id="@+id/txtAverageWaitTime"
            style="@style/chooseProviderTextStyle"
            android:layout_marginTop="@dimen/txtAverageWaitTime_marginTop"
            android:layout_marginLeft="@dimen/txtAverageWaitTime_marginLeft"
            android:layout_toRightOf="@id/ProfileImg"
            android:layout_below="@id/PatientName"
            android:text="@string/mdl_average_wait"
            android:tag="average_wait"
            android:textSize="@dimen/txtAverageWaitTime_textSize" />

        <ImageButton
            style="@style/common_style_W_Wrap_H_Wrap"
            android:src="@drawable/right_arrow_icon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="9dp"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            />

    </RelativeLayout>

    <FrameLayout
        style="@style/common_style_W_Match_M_Wrap"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txtFilter"
            style="@style/chooseProviderTextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/mdl_select_provider"
            android:tag="select_provider"
            android:textColor="@color/darkblack"
            android:gravity="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/filterTxt"
            style="@style/chooseProviderTextStyle"
            android:layout_marginTop="18dp"
            android:text="@string/mdl_filter_txt"
            android:tag="filter_txt"
            android:textColor="@color/darkblack"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_gravity="right"/>
    </FrameLayout>
    </LinearLayout>