<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_color"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16_dp">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/dimen_4_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_rectangle_top_grey"
                android:padding="@dimen/dimen_8_dp">

                <com.mdlive.unifiedmiddleware.commonclasses.customUi.CircularNetworkImageView
                    android:id="@+id/image_view"
                    android:layout_width="@dimen/dimen_32_dp"
                    android:layout_height="@dimen/dimen_32_dp"
                    android:layout_marginRight="@dimen/dimen_16_dp"
                    android:contentDescription="@string/mdl_app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/circle_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/mdl_to"
                    android:tag="to" />

                <TextView
                    android:id="@+id/fragment_message_compose_to_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:text="@string/abc_action_bar_home_description"
                    android:tag="abc_action_bar_home_description"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_8_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mdl_subject"
                    android:tag="subject"/>

                <EditText
                    android:id="@+id/fragment_message_compose_subject_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@null"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1_dp"
                android:background="@color/need_assistance"/>

            <EditText
                android:id="@+id/fragment_message_compose_body_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:background="@null"
                android:singleLine="false"
                android:padding="@dimen/dimen_8_dp"
                android:hint="@string/mdl_message"
                android:tag="message"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
</LinearLayout>